--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -6,6 +6,8 @@ $primary-color: #21233d;
 $secondary-color:#f57b00;
 $third-color:#0094f5;
 $dark-grey: #333;
+$alert-color: #ff6b6b; /* Rojo anaranjado para alertas */
+$notification-color: #4caf50; /* Verde para notificaciones positivas */
 
 // Tipografía
 $font-size-base: 16px;
