--- a/src/components/Details/UserDetail.scss
+++ b/src/components/Details/UserDetail.scss
@@ -20,7 +20,7 @@
     h2 {
       font-size: 24px;
       margin-bottom: 20px;
-      color: #333;
+      color: $third-color;
     }
   
     img {
